--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="I want to make website">
-		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo2.png">
+		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo.png">
 		<title>Udaldi</title>
 		<link rel="stylesheet" href="./css/normalize.css">
 		<link rel="stylesheet" href="./css/gridsystem.css">
