--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
 					<div class="img-responsive name_bg"></div>
 					<div class="contentSpace">
 						<div class="chapterName">Contact<br /><br /></div>
-						<form class="contact_form" action="contact.php" method="post">
+						
+						<!-- // REMOVED: Github doesn't allow PHP -->
+						<!-- form class="contact_form" action="contact.php" method="post">
 							<label for="name">Name</label>
 							<input type="text" id="name" name="remitente" placeholder="Udaldi, The Crow">
 							<label for="email">Email</label>
@@ -166,7 +168,7 @@
 							<label for="inquery">Have your say</label>
 							<textarea id="inquery" name="inquery"></textarea>
 							<button type="submit">Submit</button>
-						</form>
+						</form -->
 					</div>
 				</div><!--top_bg-->
 			</div><!--top_frame-->
