--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="I want to make website">
+		<meta name="description" content="This is an official portfolio of Udaldi">
 		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo.png">
+		<meta name="author" content="Udaldi" />
 		<title>Udaldi</title>
 		<link rel="stylesheet" href="./css/normalize.css">
 		<link rel="stylesheet" href="./css/gridsystem.css">
