--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div id="go_next"><svg><use xlink:href="#gonext"></use></svg></div> <!-- next -->
 						<div class="flex_item" id="item1">
 							<div class="img-responsive interview_bg">
-								<div class="inside_flex_item chapterName">About<br />Me<br /><br />
+								<div class="inside_flex_item chapterName red_text">About<br />Me<br /><br />
 									<table id="babble" border="0" cellspacing="0" cellpadding="0" width="100%" >
 										<tbody align="right">
 											<tr>
