--- a/index.html
+++ b/index.html
@@ -153,20 +153,21 @@
 								<tr>
 									<td>
 										<div id="graphNvBG">
-										<span class="white_text">Graphic Novel</span>
+											<span class="workType white_text">Graphic Novel</span>
+										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>
 										<div id="photoBG">
-											<span class="white_text">Photography</span>
+											<span class="workType white_text">Photography</span>
 										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>
 										<div id="artAllBG">
-											<span class="white_text">Art in all<br />its forms</span>
+											<span class="workType white_text">Art in all<br />its forms</span>
 										</div>
 									</td>
 								</tr>
@@ -186,8 +187,10 @@
 				<div class="contact_bg">
 					<div class="img-responsive name_bg"></div>
 					<div class="contentSpace">
-						<div class="chapterName green_text">Contact<br /><br /></div>
-						<form class="contact_form" action="contact.php" method="post">
+						<div class="chapterName darkGray_text">Contact<br /><br /></div>
+						
+						<!-- // REMOVED: Github doesn't allow PHP-->
+						<!-- form class="contact_form" action="contact.php" method="post">
 							<label for="name">Name</label>
 							<input type="text" id="name" name="remitente" placeholder="Udaldi, The Crow">
 							<label for="email">Email</label>
@@ -195,7 +198,7 @@
 							<label for="inquery">Have your say</label>
 							<textarea id="inquery" name="inquery"></textarea>
 							<button type="submit">Submit</button>
-						</form>
+						</form -->
 					</div>
 				</div><!--top_bg-->
 			</div><!--top_frame-->
