--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -51,8 +52,8 @@
 					<div class="contentSpace">
 						<div class="chapterName">Hello<br />World<br /><br /></div>
 						<div class="typewriter white_text">
-							<p>Hi everyone. This is Udaldi.</p>
-							<p>Welcome to my virtual space.</p>
+							<div class="p1">Hi everyone. This is Udaldi.</div><br />
+							<div class="p2">Welcome to my virtual space.</div>
 						</div>
 					</div>
 				</div><!--top_bg-->
@@ -147,37 +148,10 @@
 				<div id="works" class="setAnchor"></div>
 				<div class="work_bg">
 					<div class="contentSpace">
-						<div class="chapterName cream_text">Works<br /><br /></div>
-						<div class="xs_layout" style="height: 100%">
-							<table class="worksTblXS" border="0" cellspacing="0" cellpadding="0" width="100%">
-								<tr>
-									<td>
-										<div id="graphNvBG">
-											<span class="workType white_text">Graphic Novel</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<div id="photoBG">
-											<span class="workType white_text">Photography</span>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<div id="artAllBG">
-											<span class="workType white_text">Art in all<br />its forms</span>
-										</div>
-									</td>
-								</tr>
-							</table>
-						</div>
-						<div class="md_layout">
-							
-						</div>
+						<div class="chapterName readable cream_text">Works<br /></div>
+						<div id="worksList"></div>
 					</div>
-				</div><!--top_bg-->
+				</div><!--work_bg-->
 				<div id="goDown"><a href="#contact"><svg><use xlink:href="#godown"></use></svg></a></div>
 			</div><!--top_frame-->
 			
