--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -146,12 +147,13 @@
 			<!-- WORKS -->
 			<div class="top_frame">
 				<div id="works" class="setAnchor"></div>
-				<div class="work_bg">
+				<div id="work_bg">
 					<div class="contentSpace">
-						<div class="chapterName readable cream_text">Works<br /></div>
-						<div id="worksList"></div>
+						<div class="chapterName readable cream_text">Works<br /><br /></div>
+						<div id="clickMe"><svg><use xlink:href="#clickme"></use></svg></div>
 					</div>
 				</div><!--work_bg-->
+				
 				<div id="goDown"><a href="#contact"><svg><use xlink:href="#godown"></use></svg></a></div>
 			</div><!--top_frame-->
 			
@@ -218,6 +220,11 @@
 				<line x1="20" x2="38" y1="10" y2="30" stroke-width="2"/>
 				<line x1="2" x2="20" y1="20" y2="0" stroke-width="2"/>
 				<line x1="20" x2="38" y1="0" y2="20" stroke-width="2"/>
+			</symbol>
+			<symbol id="clickme">
+				<circle cx="90" cy="90" r="20" stroke-width="10" stroke-opacity="0.9"/>
+				<circle cx="90" cy="90" r="40" stroke-width="10" stroke-opacity="0.7"/>
+				<circle cx="90" cy="90" r="80" stroke-width="5" stroke-opacity="0.4"/ >
 			</symbol>
 		</svg>
 	</body>
