--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -150,7 +151,7 @@
 				<div id="work_bg">
 					<div class="contentSpace">
 						<div class="chapterName readable cream_text">Works<br /><br /></div>
-						<div id="clickMe"><svg><use xlink:href="#clickme"></use></svg></div>
+						<div id="clickMe"><a href="works.html"><svg><use xlink:href="#clickme"></use></svg></a></div>
 					</div>
 				</div><!--work_bg-->
 				
@@ -186,7 +187,7 @@
 			
 			
 			<footer>
-				<p class="copyright gray_text">Copyright &copy; 2018 Udaldi. All Rights Reserved.</p>
+				<p class="copyright gray_text">Copyright &copy; 2019 Udaldi. All Rights Reserved.</p>
 			</footer>
 		</div><!--wrapper-->
 		
