--- a/works.html
+++ b/works.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -42,16 +43,15 @@
 					
 					<!-- PRELUDIO -->
 					<div id="top" class="setAnchor"></div>
-					<div id="work_bg">
-						<div class="contentSpace">
-							<div class="chapterName">Graphic<br />Novel<br /><br /></div>
+					<div class="contentSpace">
+						<div class="chapterName">Graphic<br />Novel<br /><br /></div>
+						<div id="graphicNovel_bg">
 							<div class="workTypewriter black_text">
 								<p id="captureText"></p>
 							</div>
 						</div>
 					</div>
-				</div><!--top_bg-->
-				<div id="goDown"><a href="#about"><svg><use xlink:href="#godown"></use></svg></a></div>
+				</div><!--contentSpace-->
 			</div><!--top_frame-->
 			
 			
