--- a/works.html
+++ b/works.html
@@ -26,7 +26,7 @@
 							</label>
 							<div id="xs_navbar">
 								<ul>
-									<li><a href="index.html"><svg><use xlink:href="#goprev"></use></svg></a></li>
+									<li><a href="index.html#works"><svg><use xlink:href="#goprev"></use></svg></a></li>
 									<li><a href="#graphicNovel">Graphic Novel</a></li>
 									<li><a href="#photography">Photography</a></li>
 								</ul>
@@ -34,7 +34,7 @@
 						</div><!-- xs_layout -->
 						<div class="md_layout white_text">
 							<ul id="navbar">
-								<li><a href="index.html"><svg><use xlink:href="#goprev"></use></svg></a></li>
+								<li><a href="index.html#works"><svg><use xlink:href="#goprev"></use></svg></a></li>
 								<li><a href="#graphicNovel">Graphic Novel</a></li>
 								<li><a href="#photography">Photography</a></li>
 							</ul>
