--- a/works.html
+++ b/works.html
@@ -42,30 +42,23 @@
 				
 				<div id="graphicNovel" class="setAnchor"></div>
 				<div class="contentSpace">
-					<div class="chapterName">Graphic<br />Novel<br /><br /></div>
+					<div class="chapterName">Graphic<br />Novel<br /></div>
 					<div id="graphicNovel_bg">
 						<div class="workTypewriter black_text">
 							<p id="captureText"></p>
 						</div>
 					</div>
-				</div><!--contentSpace-->
-			</div><!--top_frame-->
-			
-			<div id="photography" class="setAnchor"></div>
-			<div class="top_frame">
-				<div class="contentSpace">
+					<div id="photography" class="setAnchor"></div>
 					<div class="chapterName rightAlign">Photo&emsp;<br />graphy<br /><br /></div>
 					<div class="workTypewriter black_text">
 						<div id="photo_bg"></div>
 						<p id="picCapText"></p>
 					</div>
 					<footer>
-				<p class="copyright gray_text">Copyright &copy; 2019 Udaldi. All Rights Reserved.</p>
-			</footer>
-				</div>
-				
-			</div>
-
+						<p class="copyright gray_text">Copyright &copy; 2019 Udaldi. All Rights Reserved.</p>
+					</footer>
+				</div><!--contentSpace-->
+			</div><!--top_frame-->
 			<div class="pagetop">
 				<a href="#"><svg><use xlink:href="#pagetop"></use></svg></a>
 			</div>
