--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 		<link rel="stylesheet" href="./css/about.css">
 		<link rel="stylesheet" href="./css/works.css">
 		<link rel="stylesheet" href="./css/contact.css">
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137829229-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-137829229-1');
+		</script>
 	</head>
 
 	<body>
