--- a/works.html
+++ b/works.html
@@ -11,6 +11,14 @@
 		<link rel="stylesheet" href="./css/gridsystem.css">
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/works.css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137829229-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-137829229-1');
+		</script>
 	</head>
 
 	<body>
