--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 								</p>
 								<p>
 									After I made different websites, I started to notice its expressive power. <br />
-									Its huge ability to create its own world makes it a very interesting tool to describe the inner world of its owner. And that's an inner portrait of him, indeed.<br />
+									Its huge ability to create its own world makes it a powerful tool to describe the inner world of its owner. 
+									I want to make unique websites describing the uniqueness and of their owners and what make them special.<br />
+									And that's an inner portrait of him, indeed.<br />
 									What I discovered is just the tip of the iceberg... The more I explore, the more posibilities I find. <br />
 								</p>
 							</div>
@@ -119,11 +121,19 @@
 						<div class="flex_item" id="item3">
 							<div class="flex_item_margin interview">
 								<p class="red_text">
-									Question3
+									These days, you can find fair good variety of website templates.<br />
+									People don't need website designers anymore. What do you think?
 								</p>
 								<p>
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
+									Well, that's true. Now you always find websites with good proportions, moving smoothly and without mistakes.<br />
+									Setting your images and texts in the template, it turns into an unique website. Who invented templates has a marvelous mind.<br />
+									This is yet another idea that industrial revolution brought to this world. 
+									The mass production, the lower cost... It has good and bad sides, like everything.<br />
+									And I am agree that many people won't need a website designer anymore. Templates can make good work and usually for free!<br />
 									
+									When I started to work in an IT company after I graduated, for the first time I became a consumer and manufacturer at once.
+									I lived the both sides of the economy system and I understood my responsability in each of those roles to make a better world.<br />
+									At the end, I was more conscious of the impact of  
 								</p>
 								<p class="red_text">
 									What is your vision?
