--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 								</p>
 								<p>
 									Well, that's true. Now you always find websites with good proportions, moving smoothly and without mistakes.<br />
-									Setting your images and texts in the template, it turns into an unique website. Who invented templates has a marvelous mind.<br />
+									Setting your images and texts in the template, it turns into an unique website. Who invented templates has a marvelous mind...<br /><br />
 									This is yet another idea that industrial revolution brought to this world. 
 									The mass production, the lower cost... It has good and bad sides, like everything.<br />
-									And I am agree that many people won't need a website designer anymore. Templates can make good work and usually for free!<br />
+									And I am agree that many people won't need a website designer anymore. Templates can make good work and usually for free!<br /><br />
 									
 									When I started to work in an IT company after I graduated, for the first time I became a consumer and manufacturer at once.
 									I lived the both sides of the economy system and I understood my responsability in each of those roles to make a better world.<br />
