--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
 									Setting your images and texts in the template, it turns into an unique website. Who invented templates has a marvelous mind...<br /><br />
 									This is yet another idea that industrial revolution brought to this world. 
 									The mass production, the lower cost... It has good and bad sides, like everything.<br />
-									And I am agree that many people won't need a website designer anymore. Templates can make good work and usually for free!<br /><br />
+									And I am agree that many people won't need a website designer anymore. 
+									Templates can make good work for much cheaper cost. We all have freedom of choice.<br /><br />
 									
 									When I started to work in an IT company after I graduated, for the first time I became a consumer and manufacturer at once.
 									I lived the both sides of the economy system and I understood my responsability in each of those roles to make a better world.<br />
-									At the end, I was more conscious of the impact of  
+									At the end, I was more conscious of the impact of my own action as consumer and as manufacturer. Our society is built by tiny actions of each of us.<br />
+									That 
 								</p>
 								<p class="red_text">
 									What is your vision?
