--- a/index.html
+++ b/index.html
@@ -163,13 +163,17 @@
 									Hmmm... I need to know you better then. How would you seduce me?
 								</p>
 								<p>
-									Haha! Well, as a good crow, I'd invite you to fly synchronized together in the nature and then take you to the best waste bin of the city for a romantic dinner. 
+									Haha! Is that the way to know the people deeply?<br /> 
+									Well, as a good crow, I'd invite you to fly synchronized together in the nature and then take you to the best waste bin of the city for a romantic dinner. <br />
+									How about that?
 								</p>
 								<p class="red_text">
-									Haha! Done!<br />You also make illustrations and photography for the website.
+									..., next question!<br />Tell me about the illustrations and photography.
 								</p>
 								<p>
-								
+									I've been a graphic novelist since I was a kid. I always drew in my life. Experimented different materials for different expression... It is unbelievable that drawing can give people emotions, isn't it? <br />
+									Sometimes we take this for granted and we simply forget about it, but it's really amazing, almost a magic. <br />As a child, I saw the graphic novel as my way to tell stories. Still I think it's amazing that only pen and papers can do so much!! 
+									
 								</p>
 							</div>
 						</div>
