--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -168,7 +169,14 @@
 									How about that?
 								</p>
 								<p class="red_text">
-									..., next question!<br />Tell me about the illustrations and photography.
+									... Next question!
+								</p>
+							</div>
+						</div>
+						<div class="flex_item" id="item5">
+							<div class="flex_item_margin interview">
+								<p class="red_text">
+									Tell me about the illustrations and photography.
 								</p>
 								<p>
 									I've been a graphic novelist since I was a kid. I always drew in my life. Experimented different materials for different expression... It is unbelievable that drawing can give people emotions, isn't it? <br />
@@ -203,7 +211,7 @@
 					<div class="contentSpace">
 						<div class="chapterName darkGray_text">Contact<br /><br /></div>
 						
-						<!-- // REMOVED: Github doesn't allow PHP-->
+						<!-- // REMOVED: Github no viene con PHP -->
 						<!-- form class="contact_form" action="contact.php" method="post">
 							<label for="name">Name</label>
 							<input type="text" id="name" name="remitente" placeholder="Udaldi, The Crow">
