--- a/works.html
+++ b/works.html
@@ -11,14 +11,6 @@
 		<link rel="stylesheet" href="./css/gridsystem.css">
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/works.css">
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137829229-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-137829229-1');
-		</script>
 	</head>
 
 	<body>
@@ -56,11 +48,27 @@
 							<p id="captureText"></p>
 						</div>
 					</div>
+					<div class="explicando">
+						As I can remember, I always drew. Maybe I was borned holding already a pen and paper... 
+						Soon, the sequence of images became a powerful story telling tool for me. <br /><br />
+						The graphic novel is very similar to the film, but it lacks in its imposed speed and sound. 
+						Actually, the speed, all the sound track are all generated in the reader's mind. 
+						That part is what makes the comic so interesting, similar to the literature. 
+						Readers can see and hear more than what the writers gave to them.<br />
+						That's unbelievable imagination of human being.<br/><br />
+						The graphic novel has the good part of films and good part of literature.<br />
+					</div>
+					
 					<div id="photography" class="setAnchor"></div>
-					<div class="chapterName rightAlign">Photo&emsp;<br />graphy<br /><br /></div>
+					<div class="xs_layout chapterName rightAlign" style="line-height: 3rem">Photo&emsp;<br />graphy<br /><br /></div>
+					<div class="md_layout chapterName rightAlign" style="line-height: 6rem">Photo&emsp;<br />graphy<br /><br /></div>
 					<div class="workTypewriter black_text">
 						<div id="photo_bg"></div>
 						<p id="picCapText"></p>
+					</div>
+					<div class="explicando">
+						I've just get started with the photography in 2019. And I'm very newbie, I must say. As I hate to be taken pictures of myself, I'm used to stay away from cmeras.<br />
+						But I always enjoyed watching photographer's work. Many of my graphic novels have pictures as model. 
 					</div>
 					<footer>
 						<p class="copyright gray_text">Copyright &copy; 2019 Udaldi. All Rights Reserved.</p>
