--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<p>
 									When it is for a client, there is a process of knowing him well before I get started.<br /> 
 									Apart from the technical and functional requirements, I need to know the person who the website is going to represent.<br />
-									The design should express his essence, just like a portrait... At least, this is what I try.
+									The design should express his essence, just like a portrait... At least, that is what I try.
 								</p>
 								<p class="red_text">
 									Portrait website?
@@ -114,9 +114,9 @@
 								<p>
 									After I worked with different clients, I started to notice the expressive power of the website. <br />
 									A website can contain a very private world in itself and that makes it a powerful tool to describe the inner world of its owner. 
-									I want to make unique websites describing the uniqueness and of their owners and what make them special.<br />
+									I want to make unique websites describing the uniqueness of their owners and what make them so special.<br />
 									And that's an inner portrait of him, indeed.<br />
-									What I discovered is just the tip of the iceberg... The more I explore, the more posibilities I find. <br />
+									What I'm discovering about websites is just the tip of the iceberg... The more I explore, the more posibilities I find. <br />
 								</p>
 							</div>
 						</div>
@@ -134,9 +134,9 @@
 									To fit in the taste of the majority, many things became neutral and tasteless somehow.<br /><br />
 									
 									But there are places for everyone. In the same way many people buy their clothes in stores,
-									some people need the tailor to make them their unique dress because any prêt-à-porter is what they want.<br />
+									other people need the designers and tailors to make them their unique dress because any prêt-à-porter is what they want.<br />
 									To create something really yours, it must be original. Not a copy of thousand copies.<br />
-									So templates and website designers are both welcome. We fulfill different needs for different people. 
+									So templates and website designers are both welcome. We fulfill different needs. 
 									We are not mutually explusive, but mutually complementary in this world. <br /><br />
 								</p>
 								<p class="red_text">
