--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			<!-- STORE -->
 			<div class="top_frame">
 				<div id="store" class="setAnchor"></div>
-				<div class="contact_bg">
+				<div class="store_bg">
 					<div class="img-responsive name_bg"></div>
 					<div class="contentSpace">
 						<div class="chapterName darkGray_text">Store<br /><br /></div>
