--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<ul>
 									<li><a href="#about">About</a></li>
 									<li><a href="#works">Works</a></li>
-									<li><a href="#store">Store</a></li>
+									<!-- li><a href="#store">Store</a></li -->
 								</ul>
 							</div><!-- xs_navbar -->
 						</div><!-- xs_layout -->
@@ -42,7 +42,7 @@
 								<li><br /><br /><br /></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#works">Works</a></li>
-								<li><a href="#store">Store</a></li>
+								<!-- li><a href="#store">Store</a></li -->
 							</ul>
 						</div><!-- md_layout -->
 					</nav>
@@ -200,16 +200,16 @@
 					</div>
 				</div><!--work_bg-->
 				
-				<div id="goDown"><a href="#store"><svg><use xlink:href="#godown"></use></svg></a></div>
+				<!--div id="goDown"><a href="#store"><svg><use xlink:href="#godown"></use></svg></a></div -->
 			</div><!--top_frame-->
 			
 			<!-- STORE -->
-			<div class="top_frame">
+			<!--div class="top_frame">
 				<div id="store" class="setAnchor"></div>
 				<div class="store_bg">
-					<div class="img-responsive name_bg"></div>
+					<div class="img-responsive"></div>
 					<div class="contentSpace">
-						<div class="chapterName darkGray_text">Store<br /><br /></div>
+						<div class="chapterName darkGray_text">Store<br /><br /></div -->
 						
 						<!-- // REMOVED: Github no viene con PHP -->
 						<!-- form class="contact_form" action="contact.php" method="post">
@@ -221,9 +221,9 @@
 							<textarea id="inquery" name="inquery"></textarea>
 							<button type="submit">Submit</button>
 						</form -->
-					</div>
-				</div><!--top_bg-->
-			</div><!--top_frame-->
+					<!-- /div>
+				<!-- /div><!--top_bg-->
+			<!-- /div><!--top_frame-->
 			
 			
 			<div class="pagetop">
