--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="My portfolio website">
+		<meta name="description" content="Creator of graphic novels, websites and sustainable life style. ">
 		<meta name="author" content="Udaldi">
 		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo.png">
-		<title>Udaldi</title>
+		<title>Udaldi, the crow</title>
 		<link rel="stylesheet" href="./css/normalize.css">
 		<link rel="stylesheet" href="./css/gridsystem.css">
 		<link rel="stylesheet" href="./css/common.css">
