--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Creator of graphic novels, websites and sustainable life styles. 
+		<meta name="description" content="Creator of graphic novels, websites and sustainable life style. 
 						  ">
 		<meta name="author" content="Udaldi">
 		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo.png">
