--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Creator of graphic novels, websites and sustainable life style. 
-						  ">
+		<meta name="description" content="Creator of graphic novels, websites and sustainable life style. ">
 		<meta name="author" content="Udaldi">
 		<link rel="icon" type="image/png" sizes="64x64" href="./img/logo.png">
 		<title>Udaldi, the curious crow</title>
@@ -34,16 +31,13 @@
 								<ul>
 									<li><a href="#about">About</a></li>
 									<li><a href="#works">Works</a></li>
-									<!-- li><a href="#store">Store</a></li -->
 								</ul>
 							</div><!-- xs_navbar -->
 						</div><!-- xs_layout -->
 						<div class="md_layout white_text">
-							<ul id="navbar">
-								<li><br /><br /><br /></li>
+							<ul id="navbar"><br />
 								<li><a href="#about">About</a></li>
 								<li><a href="#works">Works</a></li>
-								<!-- li><a href="#store">Store</a></li -->
 							</ul>
 						</div><!-- md_layout -->
 					</nav>
