--- a/index.html
+++ b/index.html
@@ -209,27 +209,12 @@
 			<!-- WORKS -->
 			<div class="top_frame">
 				<div id="works" class="setAnchor"></div>
-				<!--div class="img-responsive"-->
-					<div class="monitor_effect">
-					<video id="myVideo" autoplay muted loop >
-						<source src="mainBg2cmp.mp4" type="video/mp4">
-					</video>
-					</div>
-				<!--/div-->
-				<div class="monitor_effect">
+				<div id="work_bg">
 					<div class="contentSpace">
-						<div class="chapterName">Hello<br />World<br /><br /></div>
-						<div class="typewriter white_text">
-							<div class="p1">Hi everyone. This is Udaldi.</div><br />
-							<div class="p2">Welcome to my virtual space.</div>
-						</div>
-						<!-- div class="chapterName readable cream_text">Works<br /><br /></div>
-						<div id="clickMe"><a href="works.html"><svg><use xlink:href="#clickme"></use></svg></a></div -->
+						<div class="chapterName readable cream_text">Works<br /><br /></div>
+						<div id="clickMe"><a href="works.html"><svg><use xlink:href="#clickme"></use></svg></a></div>
 					</div>
-				</div>
 				</div><!--work_bg-->
-				
-				<!--div id="goDown"><a href="#store"><svg><use xlink:href="#godown"></use></svg></a></div -->
 			</div><!--top_frame-->
 			
 			<!-- STORE -->
