--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -45,7 +46,7 @@
 					<!-- PRELUDIO -->
 					
 					<div class="monitor_effect">
-						<video id="myVideo" autoplay muted loop >
+						<video id="myVideo" autoplay muted loop playsinline>
 							<source src="mainBg2cmp.mp4" type="video/mp4">
 						</video>
 					</div><!-- monitor_effect -->
