--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<!-- PRELUDIO -->
 					
 					<div class="monitor_effect">
-						<video id="myVideo" autoplay muted loop playsinline>
+						<video id="myVideo" autoplay muted loop playsinline poster="./img/bg.jpg">
 							<source src="mainBg2cmp.mp4" type="video/mp4">
 						</video>
 					</div><!-- monitor_effect -->
