--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					
 					<div class="monitor_effect">
 						<video id="myVideo" autoplay muted loop playsinline poster="./img/bg.jpg">
-							<source src="mainBg2cmp.mp4" type="video/mp4">
+							<source src="prelude.mp4" type="video/mp4">
 						</video>
 					</div><!-- monitor_effect -->
 					
