--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -16,6 +15,15 @@
 		<link rel="stylesheet" href="./css/works.css">
 		<link rel="stylesheet" href="./css/life.css">
 	</head>
+<!-- Global site tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137829229-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137829229-1');
+</script>
 
 	<body>
 		<div class="wrapper">
