--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<div id="life" class="setAnchor"></div>
 				<div class="store_bg">
 					<div class="contentSpace">
-						<div class="chapterName darkGray_text">Sustainability<br /><br /></div>
+						<div class="chapterName darkGray_text">Sustain<br />&emsp;ability<br /><br /></div>
 						
 						<!-- // REMOVED: Github no viene con PHP -->
 						<!-- form class="contact_form" action="contact.php" method="post">
