--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<div class="contentSpace">
 						<div class="chapterName darkGray_text">Sustain<br />&emsp;ability<br /><br /></div>
 						
-						<!-- // REMOVED: Github no viene con PHP -->
+						<!-- // REMOVED: Github no ejecuta PHP -->
 						<!-- form class="contact_form" action="contact.php" method="post">
 							<label for="name">Name</label>
 							<input type="text" id="name" name="remitente" placeholder="Udaldi, The Crow">
@@ -216,7 +216,7 @@
 			</div><!--top_frame-->
 			
 			
-			<div class="pagetop">
+			<div id="page_top">
 				<a href="#"><svg><use xlink:href="#pagetop"></use></svg></a>
 			</div>
 			
