--- a/works.html
+++ b/works.html
@@ -101,7 +101,7 @@
 					</footer>
 				</div><!--contentSpace-->
 			</div><!--top_frame-->
-			<div class="pagetop">
+			<div id="page_top">
 				<a href="#"><svg><use xlink:href="#pagetop"></use></svg></a>
 			</div>
 						
